--- a/Style.css
+++ b/Style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 .container{
-    background-image: linear-gradient(rgba(0,0,50,0.8),rgba(0,0,50,0.8)),url(back\ image.jpg);
+    background-image: linear-gradient(rgba(0,0,50,0.8),rgba(0,0,50,0.8)),url(back.jpg);
     width: 100%;
     height: 100vh;
     position: relative;
